@@ -26,7 +26,6 @@ import java.net.URLConnection;
 import java.net.URLEncoder;
 
 public class ProfileFragment extends Fragment {
-    private int byGetOrPost = 0;
     String firstName;
     String lastName;
     String emailAddress;
@@ -67,58 +66,27 @@ public class ProfileFragment extends Fragment {
 
         @Override
         protected String doInBackground(String... arg0) {
-            if (byGetOrPost == 0) { //means by Get Method
-                try {
-                    String link = "http://107.170.241.159/sql.php?firstname="
-                            + "Barack" + "&lastname=" + "Obama";
-                    URL url = new URL(link);
-                    HttpClient client = new DefaultHttpClient();
-                    HttpGet request = new HttpGet();
-                    request.setURI(new URI(link));
-                    HttpResponse response = client.execute(request);
-                    BufferedReader in = new BufferedReader
-                            (new InputStreamReader(response.getEntity().getContent()));
+            try {
+                String link = "http://107.170.241.159/get.php?firstname="
+                        + "Michelle" + "&lastname=" + "Obama";
+                URL url = new URL(link);
+                HttpClient client = new DefaultHttpClient();
+                HttpGet request = new HttpGet();
+                request.setURI(new URI(link));
+                HttpResponse response = client.execute(request);
+                BufferedReader in = new BufferedReader
+                        (new InputStreamReader(response.getEntity().getContent()));
 
-                    StringBuffer sb = new StringBuffer("");
-                    String line = "";
-                    while ((line = in.readLine()) != null) {
-                        sb.append(line);
-                        break;
-                    }
-                    in.close();
-                    return sb.toString();
-                } catch (Exception e) {
-                    return new String("Exception: " + e.getMessage());
+                StringBuffer sb = new StringBuffer("");
+                String line = "";
+                while ((line = in.readLine()) != null) {
+                    sb.append(line);
+                    break;
                 }
-            } else {
-                try {
-                    String username = (String) arg0[0];
-                    String password = (String) arg0[1];
-                    String link = "http://myphpmysqlweb.hostei.com/loginpost.php";
-                    String data = URLEncoder.encode("username", "UTF-8")
-                            + "=" + URLEncoder.encode(username, "UTF-8");
-                    data += "&" + URLEncoder.encode("password", "UTF-8")
-                            + "=" + URLEncoder.encode(password, "UTF-8");
-                    URL url = new URL(link);
-                    URLConnection conn = url.openConnection();
-                    conn.setDoOutput(true);
-                    OutputStreamWriter wr = new OutputStreamWriter
-                            (conn.getOutputStream());
-                    wr.write(data);
-                    wr.flush();
-                    BufferedReader reader = new BufferedReader
-                            (new InputStreamReader(conn.getInputStream()));
-                    StringBuilder sb = new StringBuilder();
-                    String line = null;
-                    // Read Server Response
-                    while ((line = reader.readLine()) != null) {
-                        sb.append(line);
-                        break;
-                    }
-                    return sb.toString();
-                } catch (Exception e) {
-                    return new String("Exception: " + e.getMessage());
-                }
+                in.close();
+                return sb.toString();
+            } catch (Exception e) {
+                return new String("Exception: " + e.getMessage());
             }
         }
 
